[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-stepthrough"
version = "0.1.0"
description = "Pause and wait for Enter after each test with --step"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = []

[project.entry-points.pytest11]
stepthrough = "pytest_stepthrough.plugin"
